<resources>
    <string name="app_name">Pet Project Navigator</string>
    <string name="title_main_activity">Pet Project Navigator</string>
    <string name="title_project_activity">Проект</string>
    <string name="title_task_activity">Детали задачи</string>
    <string name="action_search">Искать</string>
    <string name="action_settings">Настройки</string>
    <string name="bottom_menu_projects">Проекты</string>
    <string name="bottom_menu_tasks">Задачи</string>
    <string name="bottom_menu_buffer">Буфер</string>
    <string name="btn_add_project">Ещё проект</string>
    <string name="btn_save_project">Сохранить</string>
    <string name="btn_delete_project">Удалить</string>
    <string name="btn_backup">Забэкапить</string>
    <string name="btn_restore_local">Загрузить</string>
    <string name="btn_to_cloud">Заоблачить</string>
    <string name="btn_restore">Восстановить</string>
    <string name="btn_add_task">Добавить задачу</string>
    <string name="btn_save_task">Commit</string>
    <string name="btn_delete_task">Удалить</string>
    <string name="btn_complete_task">Завершить</string>
    <string name="btn_out_task">Выкинуть из проекта</string>
    <string name="btn_combine_buffer">Собрать таски в проект</string>
    <string name="btn_settings">Настройки</string>
    <string name="project_lbl_name">Название</string>
    <string name="project_lbl_task">Задачи</string>
    <string name="project_lbl_tech">Технологии</string>
    <string name="project_lbl_time">Время</string>
    <string name="project_lbl_links">Ссылки</string>
    <string name="project_lbl_desc">Описание</string>
    <string name="project_lbl_type">Тип</string>
    <string name="task_edit_time">Нужно оценить время</string>
    <string name="new_tech_title">Задайте имя технологии</string>
    <string name="new_tech_sample">Парусные аномалии Фуко</string>
    <string name="new_tech_ok">Создать технологию</string>
    <string name="new_tech_cancel">Отмена</string>
    <string name="btn_add_tech">Новый</string>
    <string name="btn_delete_tech">Дел</string>
    <string name="new_type_title">Назовите тип</string>
    <string name="new_type_sample">Таска делается лежа не диване</string>
    <string name="new_type_ok">Создать тип</string>
    <string name="btn_add_type">Новый</string>
    <string name="btn_delete_type">Дел</string>
    <string name="sample_project">Пример длинного названия проекта</string>
    <string name="sample_project_desc">Небольшое описание. Буквально в несколько строк</string>
    <string name="sample_project_counter">4 задачи</string>
    <string name="sample_task_title">Пример длинного названия задачи</string>
    <string name="sample_task_tech">Технология 1</string>
    <string name="sample_task_time">1 неделя 2 дня 13 часов 40 минут</string>
    <string name="chooser_title">Select a DB backup file"</string>
    <string name="title_activity_task_list">TaskListActivity</string>
    <string-array name="menu_list">
        <item />
        <item>@string/bottom_menu_projects</item>
        <item>@string/bottom_menu_tasks</item>
        <item>@string/bottom_menu_buffer</item>
        <item />
        <item>@string/btn_backup</item>
        <item>@string/btn_restore</item>
        <item />
        <item>@string/btn_settings</item>
    </string-array>
    <string-array name="image_list">
        <item />
        <item>ic_projects</item>
        <item>ic_tasks</item>
        <item>ic_buffer</item>
        <item />
        <item>ic_upload</item>
        <item>ic_restore</item>
        <item />
        <item>ic_settings</item>
    </string-array>
    <string name="criterion_chooser">Поиск по...</string>
    <string name="criterion_tech">Поиск по технологии</string>
    <string name="criterion_name">Поиск по названию</string>
    <string name="criterion_desc">Поиск по описанию</string>
    <string name="criterion_time">Поиск по времени</string>
    <string name="sample_buffer_title">Буффер</string>
    <string name="sample_buffer_desc">Проект из буферных тасков</string>
    <string name="header_file_path">"@drawable/ic_header"</string>
</resources>
