<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/new_tech_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_add_tech" />

    <EditText
        android:id="@+id/e_tech_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_tech_sample"
        android:inputType="textPersonName" />

    <Button
        android:text="@string/new_tech_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add_tech" />

</LinearLayout>