<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/project_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/lbl_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_lbl_name"
                android:textColor="@color/blackFont" />

            <EditText
                android:id="@+id/e_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sample_project"
                android:inputType="text|textMultiLine"
                android:maxLines="2"
                android:textColor="@color/blackFont" />

            <TextView
                android:id="@+id/lbl_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_lbl_desc"
                android:textColor="@color/blackFont" />

            <EditText
                android:id="@+id/e_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sample_project_desc"
                android:inputType="text|textMultiLine"
                android:maxLines="5"
                android:textColor="@color/blackFont" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_project"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/buttonBack"
                    android:text="@string/btn_save_project"
                    android:textColor="@color/blackFont" />

                <Button
                    android:id="@+id/btn_delete_project"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/buttonAccentBack"
                    android:text="@string/btn_delete_project"
                    android:textColor="@color/blackFont" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bottom_sheet_task"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/panelBack"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_add_task"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-5dp"
                android:backgroundTint="@color/buttonBack"
                android:text="@string/btn_add_task"
                android:textColor="@color/blackFont" />

            <ListView
                android:id="@+id/task_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp" />
        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>