<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/panelAccentBack"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lbl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="12dp"
        android:paddingRight="15dp"
        android:paddingBottom="2dp"
        android:text="@string/sample_task_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/whiteFont" />

    <TextView
        android:id="@+id/lbl_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/sample_task_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/whiteFont" />

    <TextView
        android:id="@+id/lbl_tech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="2dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:text="@string/sample_task_tech"
        android:textAllCaps="true"
        android:textColor="@color/whiteFont"
        android:textStyle="normal|italic" />
</LinearLayout>